<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_cat"
        android:title="@string/title_nav_cats" />
    <item
        android:id="@+id/nav_procedures"
        android:icon="@drawable/ic_procedures"
        android:title="@string/title_nav_procedures" />
    <item
        android:id="@+id/nav_food"
        android:icon="@drawable/ic_food"
        android:title="@string/title_nav_food" />
    <item
        android:id="@+id/nav_fun"
        android:icon="@drawable/ic_fun"
        android:title="@string/title_nav_fun" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_nav_settings" />
</menu>
